# movie-rating-api/src/main/resources/openapi/v1/openapi.yaml
@@ -68,9 +68,19 @@ paths:
             format: int64
           required: true
           description: Numeric ID of the movie to rate
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RatingApiDto"
       responses:
         '201':
           description: Rating has been successfully created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RatingDetailApiDto"
         '400':
           description: Bad request
           content:
@@ -78,13 +88,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponseApiDto"
         '401':
-          description: Unauthenticated
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponseApiDto"
-        '403':
-          description: Unauthorized to perform the operation
+          description: Unauthorized
           content:
             application/json:
               schema:
@@ -116,9 +120,19 @@ paths:
             format: int64
           required: true
           description: Numeric ID of the rating to update
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RatingApiDto"
       responses:
         '200':
           description: Rating has been successfully updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RatingDetailApiDto"
         '400':
           description: Bad request
           content:
@@ -126,13 +140,13 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponseApiDto"
         '401':
-          description: Unauthenticated
+          description: Unauthorized
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponseApiDto"
         '403':
-          description: Unauthorized to perform the operation
+          description: Forbidden to perform the operation
           content:
             application/json:
               schema:
@@ -164,8 +178,8 @@ paths:
           required: true
           description: Numeric ID of the rating to delete
       responses:
-        '200':
-          description: Rating has been successfully deleted
+        '204':
+          description: Rating has been successfully deleted. No content is returned.
         '400':
           description: Bad request
           content:
@@ -173,13 +187,13 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponseApiDto"
         '401':
-          description: Unauthenticated
+          description: Unauthorized
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponseApiDto"
         '403':
-          description: Unauthorized to perform the operation
+          description: Forbidden to perform the operation
           content:
             application/json:
               schema:
@@ -239,3 +253,55 @@ components:
         name:
           description: Name of the movie
           type: string
+    RatingApiDto:
+      description: Rating - number between 1 and 10 (10 is the best)
+      required:
+        - rating
+      properties:
+        rating:
+          description: Rating - number between 1 and 10 (10 is the best)
+          type: integer
+          minimum: 1
+          maximum: 10
+    RatingDetailApiDto:
+      description: Information about a rating
+      required:
+        - id
+        - movieName
+        - userEmail
+        - rating
+        - ratedAt
+      properties:
+        id:
+          description: Numeric ID of the rating
+          type: integer
+          format: int64
+        movie:
+          description: Rated movie
+          $ref: "#/components/schemas/MovieApiDto"
+        user:
+          description: User who rated the movie
+          $ref: "#/components/schemas/UserApiDto"
+        rating:
+          description: Rating - number between 1 and 10 (10 is the best)
+          type: integer
+          minimum: 1
+          maximum: 10
+        ratedAt:
+          description: Date and time of the rating
+          type: string
+          format: date-time
+    UserApiDto:
+      description: Information about a user
+      required:
+        - id
+        - email
+      properties:
+        id:
+          description: Numeric ID of the user
+          type: integer
+          format: int64
+        email:
+          description: Email of the user
+          type: string
+
