# movie-rating-app/src/main/java/com/github/movierating/dto/RatingDetailDto.java
@@ -1,0 +1,11 @@
+package com.github.movierating.dto;
+
+import java.time.LocalDateTime;
+
+public record RatingDetailDto(Long id,
+                              MovieDto movie,
+
+                              UserDto user,
+                              int rating,
+                              LocalDateTime ratedAt) {
+}
